[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/40-Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/CreatorRail.gd" type="Script" id=2]

[sub_resource type="StyleBoxTexture" id=1]

[node name="CreatorRail" type="VBoxContainer"]
margin_right = 1046.0
margin_bottom = 104.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="ReverseLayout" type="Control" parent="."]
margin_right = 1046.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="ReverseLayout"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="ReverseLayout/HBoxContainer"]
margin_top = 4.0
margin_right = 992.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Reverse Layout"
valign = 1

[node name="CheckBoxContainer" type="Control" parent="ReverseLayout/HBoxContainer"]
margin_left = 996.0
margin_right = 1046.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="CheckBox" type="CheckBox" parent="ReverseLayout/HBoxContainer/CheckBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_right = -5.0
margin_bottom = -5.0
rect_scale = Vector2( 2.5, 2.5 )

[node name="MakeLock" type="Control" parent="."]
margin_top = 54.0
margin_right = 1046.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="MakeLock"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="MakeLock/HBoxContainer"]
margin_top = 4.0
margin_right = 992.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Make Lock"
valign = 1

[node name="CheckBoxContainer" type="Control" parent="MakeLock/HBoxContainer"]
margin_left = 996.0
margin_right = 1046.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="CheckBox" type="CheckBox" parent="MakeLock/HBoxContainer/CheckBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_right = -5.0
margin_bottom = -5.0
rect_scale = Vector2( 2.5, 2.5 )
pressed = true

[node name="AddCreatorData" type="Control" parent="."]
margin_top = 108.0
margin_right = 1046.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="AddCreatorData"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="AddCreatorData/HBoxContainer"]
margin_top = 4.0
margin_right = 701.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "CreatorData:"
valign = 1

[node name="Button" type="Button" parent="AddCreatorData/HBoxContainer"]
margin_left = 705.0
margin_right = 1046.0
margin_bottom = 50.0
text = "  Add Creator Data  "

[node name="CreatorData" type="HBoxContainer" parent="."]
margin_top = 162.0
margin_right = 1046.0
margin_bottom = 165.0

[node name="VSeparator" type="VSeparator" parent="CreatorData"]
margin_right = 50.0
margin_bottom = 3.0
custom_constants/separation = 50
custom_styles/separator = SubResource( 1 )

[node name="Contents" type="VBoxContainer" parent="CreatorData"]
margin_left = 54.0
margin_right = 1046.0
margin_bottom = 3.0
size_flags_horizontal = 3

[connection signal="pressed" from="ReverseLayout/HBoxContainer/CheckBoxContainer/CheckBox" to="." method="change"]
[connection signal="pressed" from="MakeLock/HBoxContainer/CheckBoxContainer/CheckBox" to="." method="change"]
[connection signal="pressed" from="AddCreatorData/HBoxContainer/Button" to="." method="_on_AddCreatorData_pressed"]
